--- a/index.html
+++ b/index.html
@@ -4,15 +4,72 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css">
   <title>Kunan Form</title>
 </head>
 <body>
-  <form action="">
+  <div class="content">
+    <p>Antes de iniciar la inscripción debes leer las <span class="Text-Red">bases del concurso.</span></p>
+    <p><span class="Text-Bold">Nota:</span> Al finalizar el formulario encontrarás el icono GUARDAR,
+      el cual permitirá que puedas guardar la información ingresada si no
+      culminaste el formulario, dándote la posibilidad de entrar cuando
+      necesites concretar y/o editar antes de elegir el icono ENVIAR.</p>
+  </div>
+  <form action="" class="content">
     <h1>Formulario de Registro</h1>
+    <section id = 'datos-representante' class="">
+      <h2>Datos del representante de la entidad postulante</h2>
+      <div class="div-left">
+        <label for="apellidos" class="text-apellidos">Apellidos</label>
+        <input type="text" id = "text-apellidos">
+        <label for="birth">Fecha de Nacimiento(dd/mm/yyyy)</label>
+        <input type="text" id = "date-nac" name="" value="">
+        <label for="birthPlace">Región de nacimiento</label><br>
+        <select name="" id="region-nac">
+          <!-- Regiones -->
+        </select>
+        <label for="sexo">Sexo</label>
+        <input type="checkbox" name="" value="Masculino">Masculino <br>
+        <input type="checkbox" name="" value="Femenino">Femenino
+      </div>
+      <div class="div-right">
+        <label for="Nombres">Nombres</label>
+        <input type="text" id = "text-name">
+        <label for="edad">Edad</label>
+        <select class="" name="" id = "select-edad">
+          <!-- edad           -->
+        </select>
+        <label for="region">Región de Residencia</label>
+        <select class="" name="" id = "select-region">
+          <!-- region residencia -->
+        </select>
+      </div>
+      <div class="profesion">
+        <div class="div-left">
+          <label for="Profesión">Profesión</label>
+          <input type="text" id = "text-profesion">
+          <label for="Tiempo">Tiempo en dicho cargo en cantidad de meses</label>
+          <input type="text" id = "text-tiempo-cargo">
+        </div>
+        <div class="div-right">
+          <label for="">Cargo en la Organización</label>
+          <input type="text" id = "text-cargo">
+          <label for="">Tiempo en la organización en cantidad de meses</label>
+          <input type="text" id = "text-tiempo-orga">
+        </div>
+      </div>
+    </section>
+    <section id = "datos-entidad">
+      <h2>Datos de la entidad del Postulante</h2>
+      <div class="left">
+        <label for="">Nombre de la Entidad</label>
+        <input type="text" id = "Text-nombreEntidad">
+      </div>
+      <div class="right"></div>
+    </section>
   </form>
 
-<script type="text/javascript" src="assets/js/main.js"></script>
+<script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 </html>
